<resources>
    <string name="app_name">IOT UI Design</string>
    <string name="smart_bathroom_system">Smart Bathroom System</string>
    <string name="bathroomicon">BathroomIcon</string>
    <string name="home_bathroom_devices">Home Bathroom Devices</string>
    <string name="motion">Motion</string>
    <string name="temperature">Temperature</string>


    <string name="water_tank">Water Tank</string>
    <string name="indicator">Water Level: </string>
    <string name="water_reserve_level">Water Tank Details</string>
    <string name="water_value">Water Level:  </string>
    <string name="percentage"><![CDATA[percentage(%): ]]></string>
    <string name="condition">Condition: </string>
    <string name="symbol">%</string>
    <string name="status">Details: </string>
    <string name="_01">0</string>
    <string name="_02">0</string>
    <string name="_123">0</string>
    <string name="litre">L</string>
    <string name="blank">--</string>
    <string name="dot">.</string>

    <string name="txtMotion">Motion :</string>
    <string name="fDetect">Not Detected</string>
    <string name="light">light</string>
    <string name="fan">fan</string>
    <string name="door">door</string>
    <string name="fOff">--</string>
    <string name="fOn">--</string>
    <string name="fLocked">--</string>
    <string name="dDetect">Not Occupied</string>
    <string name="datetime">Date n Time</string>

    <string name="txtDatnT">--</string>
    <string name="txtFanS">--</string>
    <string name="txtHum">--</string>
    <string name="txtRtime">--</string>
    <string name="txtTem">--</string>
    <string name="time_date"><![CDATA[time & date:]]></string>
    <string name="fan_status">Fan Status</string>
    <string name="humidity">Humidity:</string>
    <string name="remaining_time">Remaining Time:</string>
    <string name="uibnuib">Temperature:</string>
    <string name="dht_sensor">DHT Sensor</string>


</resources>