<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEBEB"
    tools:context=".Homepage">

    <TextView
        android:id="@+id/txtHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_bathroom_devices"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <Button
        android:id="@+id/btnMotion"
        android:layout_width="169dp"
        android:layout_height="132dp"
        android:backgroundTint="@color/white"
        android:drawableTop="@drawable/ic_motions"
        android:text="@string/motion"
        android:textColor="#000000"
        app:cornerRadius="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.268" />

    <Button
        android:id="@+id/btnTank"
        android:layout_width="174dp"
        android:layout_height="131dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/white"
        android:drawableTop="@drawable/ic_tank"
        android:text="@string/water_tank"
        android:textColor="#000000"
        app:cornerRadius="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnMotion"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26999998" />

    <Button
        android:id="@+id/btnTemp"
        android:layout_width="169dp"
        android:layout_height="135dp"
        android:backgroundTint="@color/white"
        android:drawableTop="@drawable/ic_temp"
        android:text="@string/temperature"
        android:textColor="#000000"
        app:cornerRadius="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMotion"
        app:layout_constraintVertical_bias="0.149" />

</androidx.constraintlayout.widget.ConstraintLayout>